<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.forgotpassword.ForgotPasswordActivity">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="24dp"
		android:paddingRight="24dp"
		android:paddingLeft="24dp">

		<TextView
			android:id="@+id/tvBrand"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:text="@string/tvBrand"
			android:textColor="@color/colorPrimary"
			android:textSize="48sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/tvLinkForgotPassword"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:text="@string/tvForgotPassword"
			android:textSize="24sp"
			app:layout_constraintEnd_toEndOf="@+id/tvBrand"
			app:layout_constraintStart_toStartOf="@+id/tvBrand"
			app:layout_constraintTop_toBottomOf="@+id/tvBrand"/>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/tlEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:hint="@string/etUsername"
			app:layout_constraintEnd_toEndOf="@+id/tvLinkForgotPassword"
			app:layout_constraintStart_toStartOf="@+id/tvLinkForgotPassword"
			app:layout_constraintTop_toBottomOf="@+id/tvLinkForgotPassword"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/etUsername"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"/>
		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/btnForgotPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:background="@drawable/dr_rounded"
			android:text="@string/btnForgotPassword"
			android:textAllCaps="false"
			app:layout_constraintEnd_toEndOf="@+id/tlEmail"
			app:layout_constraintStart_toStartOf="@+id/tlEmail"
			app:layout_constraintTop_toBottomOf="@id/tlEmail"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:orientation="horizontal"
			app:layout_constraintEnd_toEndOf="@+id/btnForgotPassword"
			app:layout_constraintStart_toStartOf="@+id/btnForgotPassword"
			app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword">

			<TextView
				android:id="@+id/tvSignup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tvSignup"
				android:textSize="16sp"/>

			<TextView
				android:id="@+id/tvLinkSignup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingBottom="6dp"
				android:paddingEnd="0dp"
				android:paddingStart="6dp"
				android:paddingTop="6dp"
				android:text="@string/lSignup"
				android:textColor="@color/colorPrimary"
				android:textSize="16sp"/>
		</LinearLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
