<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.splashscreen.SplashScreenActivity">

	<TextView
		android:id="@+id/tvBrand"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:text="@string/txtSplashScreen"
		android:textColor="@color/colorPrimary"
		android:textSize="@android:dimen/app_icon_size"
		app:layout_constraintBottom_toTopOf="@+id/llSplashScreenBrand"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<LinearLayout
		android:id="@+id/llSplashScreenBrand"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="20dp"
		app:layout_constraintBottom_toBottomOf="parent">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:gravity="center_horizontal"
			android:text="@string/txtSplashScreenFrom"
			android:textSize="12sp"
			app:layout_constraintBottom_toBottomOf="parent"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/txtSplashScreenBrand"
			android:textSize="14sp"
			android:textColor="@color/colorPrimary"
			app:layout_constraintBottom_toBottomOf="parent"/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
