<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:fitsSystemWindows="true">

	<de.hdodenhof.circleimageview.CircleImageView
		android:id="@+id/ivProfile"
		android:layout_width="60dp"
		android:layout_height="60dp"
		android:layout_marginStart="24dp"
		android:layout_marginTop="18dp"
		android:layout_marginBottom="18dp"
		android:contentDescription="@string/contentDescImgProfile"
		android:src="@drawable/avatar_2"
		app:civ_border_width="0.5dp"
		app:civ_border_color="@color/divider"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/tvHeaderTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:text="@string/headerTitle"
		android:textAppearance="?attr/textAppearanceHeadline6"
		app:layout_constraintStart_toStartOf="@+id/ivProfile"
		app:layout_constraintTop_toBottomOf="@+id/ivProfile"/>

	<TextView
		android:id="@+id/tvHeaderSubtitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/headerSubtitle"
		android:textAppearance="?attr/textAppearanceBody2"
		android:textColor="@color/material_on_surface_emphasis_medium"
		app:layout_constraintStart_toStartOf="@+id/tvHeaderTitle"
		app:layout_constraintTop_toBottomOf="@+id/tvHeaderTitle"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="0.5dp"
		android:layout_marginTop="12dp"
		android:background="@drawable/dr_divider"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvHeaderSubtitle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
