<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	tools:context=".ui.MainActivity">

	<com.google.android.material.card.MaterialCardView
		android:id="@+id/card"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/m8"
		app:cardCornerRadius="@dimen/m10"
		app:cardElevation="0dp"
		app:strokeColor="@color/stroke_color"
		app:strokeWidth="1dp">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView
				android:id="@+id/ivMovieThumb"
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:contentDescription="@string/contentDescMedia"
				android:scaleType="centerCrop"
				android:src="@drawable/avatar_1"
				app:layout_constraintDimensionRatio="16:9"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"/>

			<ImageView
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:background="?android:attr/selectableItemBackground"
				android:clickable="true"
				android:focusable="true"
				android:src="@drawable/dr_scrim"
				app:layout_constraintDimensionRatio="16:9"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				android:contentDescription="@string/contentDescMedia"/>

			<ImageView
				android:layout_width="42dp"
				android:layout_height="42dp"
				android:background="?actionBarItemBackground"
				android:clickable="true"
				android:contentDescription="@string/contentDescMore"
				android:focusable="true"
				android:padding="@dimen/m12"
				android:src="@drawable/ic_more_white"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"/>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/m12"
				android:orientation="vertical"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintBottom_toBottomOf="parent">

				<TextView
					android:id="@+id/tvMovieName"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/cardTitle"
					android:textColor="@color/white_50"
					android:textAppearance="?attr/textAppearanceHeadline6"/>

				<TextView
					android:id="@+id/tvMovieSubtitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/cardSubtitle"
					android:textAppearance="?attr/textAppearanceBody2"
					android:textColor="?android:attr/textColorSecondaryNoDisable"/>
			</LinearLayout>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</com.google.android.material.card.MaterialCardView>
</LinearLayout>
